==> espruino/Espruino/targets/efm32/jshardware.c <==
#include <stdlib.h>
#include <stdbool.h>
#include <stdint.h>
#include <string.h>
#include <stdio.h>
#include "jshardware.h"
#include "jstimer.h"
#include "jsutils.h"
#include "jsparse.h"
#include "jsinteractive.h"
#include "jswrap_io.h"
#include "jswrap_date.h" // for non-F1 calendar -> days since 1970 conversion.
#include "em_chip.h"
#include "em_cmu.h"
#include "em_emu.h"
#include "em_int.h"
#include "em_rtc.h"
#include "em_timer.h"
#include "em_usart.h"
#include "em_gpio.h"
#include "rtcdriver.h"
#include "nvm_hal.h"
#include "gpiointerrupt.h"
#define SYSCLK_FREQ 48000000 // Using standard HFXO freq
#define USE_RTC
#define RTC_INITIALISE_TICKS 4 // SysTicks before we initialise the RTC - we need to wait until the LSE starts up properly
#define JSSYSTIME_SECOND_SHIFT 20
#define JSSYSTIME_SECOND  (1<<JSSYSTIME_SECOND_SHIFT) // Random value we chose - the accuracy we're allowing (1 microsecond)
#define JSSYSTIME_MSECOND (1<<JSSYSTIME_SECOND_SHIFT)/1000
#define JSSYSTIME_USECOND (1<<JSSYSTIME_SECOND_SHIFT)/1000000

void jshInit() {
  
  CHIP_Init(); //Init EFM32 device


  //---------------------- RTC/clock ----------------------------/
  //Start HFXO and use it as main clock
  CMU_OscillatorEnable( cmuOsc_HFXO, true, true);
  CMU_ClockSelectSet(cmuClock_HF, cmuSelect_HFXO );
  CMU_OscillatorEnable( cmuOsc_HFRCO, false, false );

  // System Clock
  SysTick_Config(SYSTICK_RANGE-1); // 24 bit
  // NVIC_SetPriority(SysTick_IRQn, IRQ_PRIOR_SYSTICK); //EFM32 TODO: Prioritize this after SPI
  NVIC_EnableIRQ(SysTick_IRQn);


  //---------------------- UART/console ----------------------------/
  jshInitDevices(); // Initialize jshSerialDevices in jsdevice.c
  JshUSARTInfo inf ;
  inf.baudRate = DEFAULT_CONSOLE_BAUDRATE;
  inf.pinRX    = DEFAULT_CONSOLE_RX_PIN;
  inf.pinTX    = DEFAULT_CONSOLE_TX_PIN;
  inf.pinCK    = PIN_UNDEFINED;
  inf.bytesize = DEFAULT_BYTESIZE;
  inf.parity   = DEFAULT_PARITY;
  inf.stopbits = DEFAULT_STOPBITS;
  inf.xOnXOff = false;
  jshUSARTSetup(DEFAULT_CONSOLE_DEVICE, &inf); // Initialize UART for communication with Espruino/terminal.
  GPIO_PinModeSet(gpioPortF, 7, gpioModePushPull, 1); //Enable output to board-controller

  //---------------------- GPIO ----------------------------/
  uint8_t i;
  for (i=0;i<16;i++)
    watchedPins[i] = PIN_UNDEFINED;

  // Initialize GPIO interrupt driver
  GPIOINT_Init();

  // Initialise button
  jshSetPinStateIsManual(BTN1_PININDEX, true); // so subsequent reads don't overwrite the state
  jshPinSetState(BTN1_PININDEX, BTN1_PINSTATE);

  //---------------------- Utility TIMER ----------------------------/
  TIMER_Init_TypeDef timerInit     = TIMER_INIT_DEFAULT;
  TIMER_InitCC_TypeDef timerCCInit = TIMER_INITCC_DEFAULT;

  timerCCInit.mode = timerCCModeCompare;
  CMU_ClockEnable( cmuClock_TIMER0, true );
  TIMER_TopSet(TIMER0, 0xFFFF );
  TIMER_InitCC(TIMER0, 0, &timerCCInit);

  // Run timer at slowest frequency that still gives less than 1 us per tick
  timerInit.prescale = (TIMER_Prescale_TypeDef)_TIMER_CTRL_PRESC_DIV32;
  TIMER_Init(TIMER0, &timerInit );

  NVIC_ClearPendingIRQ(TIMER0_IRQn);
  NVIC_EnableIRQ(TIMER0_IRQn);
}

int jshGetSerialNumber(unsigned char *data, int maxChars) {
  if (maxChars <= 0)
  {
    return 0;
  }
  data[0] = (unsigned char)((DEVINFO->UNIQUEL      ) & 0xFF);
  data[1] = (unsigned char)((DEVINFO->UNIQUEL >>  8) & 0xFF);
  data[2] = (unsigned char)((DEVINFO->UNIQUEL >> 16) & 0xFF);
  data[3] = (unsigned char)((DEVINFO->UNIQUEL >> 24) & 0xFF);
  data[4] = (unsigned char)((DEVINFO->UNIQUEH      ) & 0xFF);
  data[5] = (unsigned char)((DEVINFO->UNIQUEH >>  8) & 0xFF);
  data[6] = (unsigned char)((DEVINFO->UNIQUEH >> 16) & 0xFF);
  data[7] = (unsigned char)((DEVINFO->UNIQUEH >> 24) & 0xFF);
  return 8;
}

JsSysTime jshGetSystemTime() {
#ifdef USE_RTC
  if (ticksSinceStart<=RTC_INITIALISE_TICKS)
    return jshGetRTCSystemTime(); // Clock hasn't stabilised yet, just use whatever RTC value we currently have
  if (hasSystemSlept) {
    // reset SysTick counter. This will hopefully cause it
    // to fire off a SysTick IRQ, which will reset lastSysTickTime
    SysTick->VAL = 0; // this doesn't itself fire an IRQ it seems
    jshDoSysTick();
  }
  // Try and fix potential glitch caused by rollover of SysTick
  JsSysTime last1, last2;
  unsigned int avr1,avr2;
  unsigned int sysTick;
  do {
    avr1 = smoothAverageSysTickTime;
    last1 = smoothLastSysTickTime;
    sysTick = SYSTICK_RANGE - SysTick->VAL;
    last2 = smoothLastSysTickTime;
    avr2 = smoothAverageSysTickTime;
  } while (last1!=last2 || avr1!=avr2);
  // Now work out time...
  return last2 + (((JsSysTime)sysTick*(JsSysTime)avr2)/SYSTICK_RANGE);
#else
	JsSysTime major1, major2, major3, major4;
	unsigned int minor;
	do {
	    major1 = SysTickMajor;
	    major2 = SysTickMajor;
	    minor = SysTick->VAL;
	    major3 = SysTickMajor;
	    major4 = SysTickMajor;
	} while (major1!=major2 || major2!=major3 || major3!=major4);
	return major1 - (JsSysTime)minor;
#endif
}

void jshSetSystemTime(JsSysTime newTime) {
	jshInterruptOff();
	// NOTE: Subseconds are not set here
#ifdef USE_RTC
	RtcTime = (uint32_t)(newTime/JSSYSTIME_MSECOND)
	           - RTCDRV_TicksToMsec(RTCDRV_GetWallClockTicks32()); //Storing it as milliseconds to speed up GetRTCtime
	hasSystemSlept = true;
#else
	SysTickMajor = newTime;
#endif

	jshInterruptOn();
	jshGetSystemTime(); // force update of the time
}

void jshDelayMicroseconds(int microsec) {
  if (microsec <= 0) {
    return;
  }
  utilTicks = microsec/(SYSCLK_FREQ*32);
  if (utilTicks < 2) utilTicks=2;
  if (utilTicks > 0xFFFFFFFF) utilTicks=0xFFFFFFFF;

  TIMER_IntClear(TIMER0, TIMER_IFC_CC1);
  TIMER_CompareSet(TIMER0, 1, TIMER_CounterGet(TIMER0) + (utilTicks & 0xFFFF));
  TIMER_IntEnable(TIMER0, TIMER_IEN_CC1);

  while(utilTicks > 0) {
    EMU_EnterEM1();
  }
  TIMER_IntDisable(TIMER0, TIMER_IEN_CC1);
}

void jshPinSetValue(Pin pin, bool value) {
  if(value) {
    GPIO_PinOutSet(efm32PortFromPin(pin),
                   pinInfo[pin].pin);
  }
  else {
    GPIO_PinOutClear(efm32PortFromPin(pin),
                     pinInfo[pin].pin);
  }
}

bool jshPinGetValue(Pin pin) {
  return GPIO_PinInGet(efm32PortFromPin(pin),
                       pinInfo[pin].pin);
}

void jshPinSetState(Pin pin, JshPinState state) {
  GPIO_Port_TypeDef port = efm32PortFromPin(pin);
  pin = pinInfo[pin].pin;
  GPIO_Mode_TypeDef gpioMode = gpioModeDisabled; //This is also for analog pins
  uint32_t out = GPIO_PinOutGet(port, pin);

  switch (state) {
    case JSHPINSTATE_GPIO_OUT :
      gpioMode = gpioModePushPull;
      break;
    case JSHPINSTATE_GPIO_OUT_OPENDRAIN :
      gpioMode = gpioModeWiredAnd;
      break;
    case JSHPINSTATE_GPIO_IN :
      gpioMode = gpioModeInput;
      break;
    case JSHPINSTATE_GPIO_IN_PULLUP :
      gpioMode = gpioModeInputPull;
      out = 1;
      break;
    case JSHPINSTATE_GPIO_IN_PULLDOWN :
      gpioMode = gpioModeInputPull;
      out = 0;
      break;
    case JSHPINSTATE_ADC_IN :
      break;
    case JSHPINSTATE_AF_OUT :
      break;
    case JSHPINSTATE_AF_OUT_OPENDRAIN :
      break;
    case JSHPINSTATE_USART_IN :
      break;
    case JSHPINSTATE_USART_OUT :
      break;
    case JSHPINSTATE_DAC_OUT :
      break;
    case JSHPINSTATE_I2C :
      // This depends on whether we're the slave or master and which pin (SDA/SCLK)
      break;
    default : assert(0);
      break;
  }
  //jsiConsolePrintf("\nPort: %d, Pin: %d, gpioMode: %d, out: %d", port, pin, gpioMode, out);
  GPIO_PinModeSet(port, pin, gpioMode, out);
}

JshPinState jshPinGetState(Pin pin) {
  GPIO_Port_TypeDef port = efm32PortFromPin(pin);
  pin = pinInfo[pin].pin;

  GPIO_Mode_TypeDef gpioMode = gpioModeDisabled; // Also for analog pins
  JshPinState state = JSHPINSTATE_UNDEFINED;

  if (pin < 8)
    gpioMode = (GPIO_Mode_TypeDef) (BUS_RegMaskedRead(&GPIO->P[port].MODEL, 0xF << (pin * 4)) >> (pin * 4));
  else
    gpioMode = (GPIO_Mode_TypeDef) (BUS_RegMaskedRead(&GPIO->P[port].MODEH, 0xF << ((pin - 8) * 4)) >> ((pin - 8) * 4));


  switch (gpioMode) {
      case gpioModePushPull :
        state = JSHPINSTATE_GPIO_OUT;
        break;
      case gpioModeWiredAnd :
        state = JSHPINSTATE_GPIO_OUT_OPENDRAIN;
        break;
      case gpioModeInput :
        state = JSHPINSTATE_GPIO_IN;
        break;
      case gpioModeInputPull :
        if (GPIO_PinOutGet(port, pin)) state = JSHPINSTATE_GPIO_IN_PULLUP;
        else state = JSHPINSTATE_GPIO_IN_PULLUP;
        break;
      default :
        break;
    }

  //jsiConsolePrintf("\nPort: %d, Pin: %d, gpioMode: %d, state: %d", port, pin, gpioMode, state);
  return state;
}

IOEventFlags jshPinWatch(Pin pin, bool shouldWatch) {
  if (jshIsPinValid(pin)) {
    if (shouldWatch && !jshGetPinStateIsManual(pin)) { //Note pin 0 does not work
      // set as input
      jshPinSetState(pin, JSHPINSTATE_GPIO_IN);
    }
    watchedPins[pinInfo[pin].pin] = (Pin)(shouldWatch ? pin : PIN_UNDEFINED);

    GPIOINT_CallbackRegister(pinInfo[pin].pin, efm32FireEvent);
    GPIO_IntConfig(efm32PortFromPin(pin), pinInfo[pin].pin,
                   true, true, shouldWatch); // Set interrupt on rising/falling edge and (enable)

    return shouldWatch ? (EV_EXTI0+pinInfo[pin].pin-1)  : EV_NONE;
  } else jsExceptionHere(JSET_ERROR, "Invalid pin!");
  return EV_NONE;
}

bool jshGetWatchedPinState(IOEventFlags device) {
  uint32_t exti = IOEVENTFLAGS_GETTYPE(device) - EV_EXTI0;
  Pin pin = watchedPins[exti];
  if (jshIsPinValid(pin))
    return GPIO_PinInGet(efm32PortFromPin(pin), pinInfo[pin].pin);
  else
    return false;
}

void jshUSARTKick(IOEventFlags device) {
  
  USART_TypeDef* uart; // Re-mapping from Espruino to EFM32

  switch(device) {
    case EV_SERIAL1:
      uart = usart0;
      break;
    case EV_SERIAL2:
      uart = usart1;
      break;
    case EV_SERIAL3:
      uart = usart2;
      break;
    case EV_SERIAL4:
      uart = uart0;
      break;
    case EV_SERIAL5:
      uart = uart1;
      break;
    default: assert(0);
  }

  int check_valid_char = jshGetCharToTransmit(device);
  if (check_valid_char >= 0)
  {
    
    uint8_t character = (uint8_t) check_valid_char;
    USART_Tx(uart, character);
  }

}

bool jshSleep(JsSysTime timeUntilWake) {
#ifdef USE_RTC
  /* TODO:
       Check jsiGetConsoleDevice to make sure we don't have to wake on USART (we can't do this fast enough)
       Check that we're not using EXTI 11 for something else
       Check we're not using PWM as this will stop
       What about EXTI line 18 - USB Wakeup event
       Check time until wake against where we are in the RTC counter - we can sleep for 0.1 sec if we're 90% of the way through the counter...
   */
  //jsiConsolePrintf("\ns: %d, t: %d, R: %d, T: %d", jsiStatus, timeUntilWake, jstUtilTimerIsRunning(), jshHasTransmitData());
  if (
      (jsiStatus & JSIS_ALLOW_DEEP_SLEEP) &&
      (timeUntilWake > (jshGetTimeForSecond()/2)) &&  // if there's less time than this then we can't go to sleep because we can't be sure we'll wake in time
      !jstUtilTimerIsRunning() && // if the utility timer is running (eg. digitalPulse, Waveform output, etc) then that would stop
      !jshHasTransmitData() && // if we're transmitting, we don't want USART/etc to get slowed down
      ticksSinceStart>RTC_INITIALISE_TICKS && // Don't sleep until RTC has initialised
      true
      ) {
    jsiSetSleep(JSI_SLEEP_DEEP);
    // deep sleep!
    uint32_t ms = (uint32_t)((timeUntilWake*1000)/jshGetTimeForSecond()); // ensure we round down and leave a little time
    if (timeUntilWake!=JSSYSTIME_MAX) { // set alarm
      RTCDRV_StartTimer(sleepTimer, rtcdrvTimerTypeOneshot,
                        ms, NULL, NULL);
    }
    // set flag in case there happens to be a SysTick
    hasSystemSlept = true;
    // -----------------------------------------------
    EMU_EnterEM2(true);
    // -----------------------------------------------
    jsiSetSleep(JSI_SLEEP_AWAKE);
  } else
#endif
  {
    JsSysTime sysTickTime;
#ifdef USE_RTC
    sysTickTime = averageSysTickTime*5/4;
#else
    sysTickTime = SYSTICK_RANGE*5/4;
#endif
    if (timeUntilWake < sysTickTime) {
      jstSetWakeUp(timeUntilWake);
    } else {
      // we're going to wake on a System Tick timer anyway, so don't bother
    }

    jsiSetSleep(JSI_SLEEP_ASLEEP);
    // -----------------------------------------------
    EMU_EnterEM1();
    // -----------------------------------------------
    jsiSetSleep(JSI_SLEEP_AWAKE);

    /* We may have woken up before the wakeup event. If so
    then make sure we clear the event */
    jstClearWakeUp();
    return true;
  }
  return false;
}
